--- a/assets/index.css
+++ b/assets/index.css
@@ -83,3 +83,23 @@ ul li a:hover {
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
 }
+
+.btn {
+    width: 100px;
+    height: 40px;
+    background: #ff7200;
+    border: 2px solid #ff7200;
+    margin-top: 13px;
+    color: #fff;
+    font-size: 15px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.srch:focus{
+    outline: none;
+}
