--- a/assets/index.css
+++ b/assets/index.css
@@ -177,3 +177,15 @@ ul li a:hover {
     border-radius: 10px;
     padding: 25px;
 }
+
+.form h2 {
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #ff7200;
+    font-size: 24px;
+    background: #fff;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
+}
