--- a/assets/index.css
+++ b/assets/index.css
@@ -157,15 +157,27 @@ ul li a:hover {
 }
 
 .content .btnn{
-    width: 100px;
+    width: 240px;
     height: 40px;
     background: #ff7200;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
+    border: none;
+    margin-top: 30px;
     color: #fff;
-    font-size: 15px;
-    border-radius: 15px;   
+    font-size: 18px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.4s ease;
 }
+
+.content .btnn:hover{
+    background: #fff;
+    color: #ff7200;
+}
+
+.content .btnn a{
+    text-decoration: none;
+}
+
 
 .form{
     width: 250px;
@@ -188,4 +200,27 @@ ul li a:hover {
     border-radius: 10px;
     margin: 2px;
     padding: 8px;
+}
+
+.form input{
+    width: 240px;
+    height: 35px;
+    background-color: transparent;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
+}
+
+.form input:focus{
+    outline: none;
+}
+
+::placeholder{
+    color: #fff;
+    font-family: Arial;
 }
