--- a/assets/index.css
+++ b/assets/index.css
@@ -176,6 +176,8 @@ ul li a:hover {
 
 .content .btnn a{
     text-decoration: none;
+    color: #000;
+    font-weight: bold;
 }
 
 
@@ -224,3 +226,27 @@ ul li a:hover {
     color: #fff;
     font-family: Arial;
 }
+
+.form .link {
+    font-family: Arial;
+    font-size: 17px;
+    padding-top: 20px;
+    text-align: center;
+}
+.form a{
+    text-decoration: none;
+    color: #ff7200;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.form .sign{
+    text-align: center;
+    padding: 5px 0px 0px 0px;
+}
+.form p{
+    padding: 20px 0px 0px 0px;
+    text-align: center;
+}
+
+.form .liw
