--- a/assets/index.css
+++ b/assets/index.css
@@ -256,5 +256,10 @@ ul li a:hover {
 .icons a{
     text-decoration: none;
     color: #fff;
-    
+}
+
+.icons ion-icon{
+    color: #fff;
+    font-size: 30px;
+    padding: 5px 0px 0px 15px;
 }
